Removes overflow to fix the repo picker popup

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -42,7 +42,7 @@ a {
 		justify-content: space-between;
 		align-items: baseline;
 		gap: 0.75rem;
-		overflow: hidden;
+		// overflow: hidden;
 
 		> * {
 			margin: 0;
